<resources>
    <string name="app_name">Login</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="login_page">Login Page</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="attempts">Attempts:</string>
    <string name="login">Login</string>
    <string name="second_page_txt">Welcome to Second Activity</string>

</resources>
